# SDLC-rstack

./: .gitignore  .npmignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  SOUL.md  THIRD-PARTY-NOTICES.md  package-lock.json  package.json  rstack-operator.example.json  tsconfig.json
.claude/: launch.json  rstack-sdlc.md  settings.json
.claude-plugin/: marketplace.json
agents/: OPERATING-STANDARD.md
assets/: rstack-workspace-v8.html
docs/: AUDIT-CURRENT-STATE.md  HARNESS.md  LOOP-ENGINEERING-UPGRADE-PLAN.md  SETUP.md  STATE-OF-RSTACK-2026-07-05.md  brownfield-adoption.md  loop-recipes.md  quick-start-guide.md
extensions/: rstack-sdlc.ts
packaging/tau-adapter/: README.md  pyproject.toml
packaging/tau-adapter/src/rstack_tau_adapter/: __init__.py  manifest.json
prompts/: act.md  add-authentication-system.md  add-changelog.md  add-mutation-testing.md  add-property-based-testing.md  architecture-review.md  blue-green-deployment.md  branch-cleanup.md  build.md  code-review.md  create-feature.md  create-jtbd.md  create-prd.md  crypto_research.md  crypto_research_haiku.md  dependency-mapper.md  estimate-assistant.md  plan.md  plan_w_team.md
research/: bibliography.md  evidence-refresh-2026-07.md  methodology.md  paper-outline.md  productivity-claims.md
rfcs/: README.md  RFC-0001-rstack-spec-v1alpha1.md  RFC-0002-decision-queue-and-readiness-gate.md  RFC-0003-cross-harness-validation.md  RFC-0004-attestation-envelope.md  RFC-0005-traceability-drift-detection.md  RFC-0006-untrusted-pr-gate.md  TEMPLATE.md
scripts/: bench-parallel.mjs  (+6 more)
spec/: primer.md  (+2 more)
(+691 files in other folders)
